--- a/bioc461-2022-lecture1.Rmd
+++ b/bioc461-2022-lecture1.Rmd
@@ -91,7 +91,7 @@ Spend two minutes thinking about the answers to the following questions:
 
 2. How much time would you need to spend getting your work to the point where another human being *could* carry on with your project?  What would this involve?
 
-3. If you laptop/desktop was unexpectedly destroyed by evil anti-research forces, what impact would this have on your project? (it's ok, we'll buy you a shiny new one from our "anti-anti-research forces" insurance fund).
+3. If your laptop/desktop was unexpectedly destroyed by evil anti-research forces, what impact would this have on your project? (it's ok, we'll buy you a shiny new one from our "anti-anti-research forces" insurance fund).
 
 # Lets (briefly) discuss your answers...
 
